<resources>
    <string name="app_name">Social Chat</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="welcome_to_social_chat">Welcome to Social Chat</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT ?</string>
    <string name="main_page">Main Page</string>
    <string name="log_out">Log Out</string>
    <string name="account_settings">Account Settings</string>
    <string name="all_users">All Users</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="your_email">Your Email</string>
    <string name="Login">Login</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="already_have_account">Already Have Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_i_m_using_social_chat">Hello, I\'m using Social Chat</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">Change Status</string>
    <string name="hint">hint</string>
    <string name="your_status">Your Status</string>
    <string name="save_changes">Save Changes</string>
    <string name="textview1">TextView1</string>
    <string name="textview2">TextView</string>
    <string name="user_default_status">User Default Status</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="total_friends">Total Friends</string>
    <string name="current_user_status">Current User Status</string>
    <string name="decline_friend_request">DECLINE FRIEND REQUEST</string>
    <string name="send_friend_request">SEND FRIEND REQUEST</string>
    <string name="default_status">Default Status</string>
    <string name="last_seen">Last Seen</string>
    <string name="enter_message">Enter Message...</string>
    <string name="display_username">Display Username</string>
    <string name="user_single_status">User default Status</string>
    <string name="user_single_name">User Single Name</string>
</resources>
